# datatect

./: Cargo.toml
src/: es_document_iterator.rs  lib.rs  schema.rs
tests/: schema_test.rs
