[package]
name = "datatect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
jsonschema = "0.15"
clap = { version = "3.1", features = ["derive"] }
rayon = "1.5"
reqwest = { version = "0.11.9", features = ["blocking", "json"], default-features = false }
